--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
 # Created by .ignore support plugin (hsz.mobi)
+.gitignore
+.idea/.gitignore
+.idea/inspectionProfiles/
+.idea/misc.xml
+.idea/modules.xml
+.idea/tasks.iml
+.idea/vcs.xml
+configs/__pycache__/
+transport/__pycache__/
+transport/sanic/__pycache__/
+transport/sanic/endpoints/__pycache__/
+venv/
+.env
