--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,46 @@
 aiofiles==0.6.0
 alembic==1.4.3
+appdirs==1.4.3
+bcrypt==3.2.0
+CacheControl==0.12.6
 certifi==2020.11.8
+cffi==1.14.4
+chardet==3.0.4
+colorama==0.4.3
+contextlib2==0.6.0
+distlib==0.3.0
+distro==1.4.0
 h11==0.9.0
+html5lib==1.0.1
 httpcore==0.11.1
 httptools==0.1.1
 httpx==0.15.4
 idna==2.10
+ipaddr==2.2.0
+lockfile==0.12.2
 Mako==1.1.3
 MarkupSafe==1.1.1
 marshmallow==3.10.0
+msgpack==0.6.2
 multidict==5.0.0
+packaging==20.3
+pep517==0.8.2
+progress==1.5
+pycparser==2.20
+pyparsing==2.4.6
 python-dateutil==2.8.1
 python-dotenv==0.15.0
 python-editor==1.0.4
+pytoml==0.1.21
+requests==2.22.0
+retrying==1.3.3
 rfc3986==1.4.0
 sanic==20.9.1
 six==1.15.0
 sniffio==1.2.0
 SQLAlchemy==1.3.22
+ujson==4.0.1
+urllib3==1.25.8
+uvloop==0.14.0
+webencodings==0.5.1
 websockets==8.1
