--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ packaging==20.3
 pep517==0.8.2
 progress==1.5
 pycparser==2.20
+PyJWT==2.0.1
 pyparsing==2.4.6
 python-dateutil==2.8.1
 python-dotenv==0.15.0
