--- a/.env
+++ b/.env
@@ -1,5 +1,10 @@
-host = 'localhost'
-port = 8000
-workers = 1
-debug = True
-dbname = db.sqlite
+POSTGRES_NAME=tasks
+POSTGRES_USER=admin
+POSTGRES_PASSWORD=qwerty
+POSTGRES_HOST=tasks-db
+POSTGRES_PORT=5432
+host=0.0.0.0
+port=8000
+workers=1
+debug=True
+dbname=db.sqlite
