--- a/requirements.txt
+++ b/requirements.txt
@@ -25,15 +25,15 @@ msgpack==0.6.2
 multidict==5.0.0
 packaging==20.3
 pep517==0.8.2
+pkg-resources==0.0.0
 progress==1.5
+psycopg2-binary==2.8.6
 pycparser==2.20
 PyJWT==2.0.1
 pyparsing==2.4.6
 python-dateutil==2.8.1
 python-dotenv==0.15.0
 python-editor==1.0.4
-pytoml==0.1.21
-requests==2.22.0
 retrying==1.3.3
 rfc3986==1.4.0
 sanic==20.9.1
