--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 POSTGRES_NAME=tasks
 POSTGRES_USER=user1
 POSTGRES_PASSWORD=qwerty
-POSTGRES_HOST=tasks-db
+POSTGRES_HOST=0.0.0.0
 POSTGRES_PORT=5432
 host=0.0.0.0
 port=8000
