--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ POSTGRES_USER=user1
 POSTGRES_PASSWORD=qwerty
 POSTGRES_HOST=tasks-db
 POSTGRES_PORT=5432
-host=tasks-app
+host=0.0.0.0
 port=8000
 workers=1
 debug=True
