--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
     env_file:
       - .env
     depends_on:
-      - database
+      - "database"
     restart: always
 
   database:
@@ -22,3 +22,4 @@ services:
       - .env
     volumes:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+    restart: always
